# Modelado-Multidimensional-del-Engagement-en-E-commerce

./: README.md  build_wheel.sh  config.py  pyproject.toml  requirements.txt
data/clusters/: training_time_clusters.parquet  validation_user_clusters.parquet
data/raw/: source.txt
models/: nov_generic_artifacts.np.npy  nov_user_based_artifacts.np.npy
modulos_comprimidos/: modelado_multidimensional_engagement-0.1.0-py3-none-any.whl
modulos_comprimidos/old/: 20260628_165025_1.whl  20260628_165316_1.whl  20260628_165846_1.whl  20260628_172117_1.whl  20260628_172512_1.whl  20260628_191805_1.whl  20260628_194027_1.whl  20260629_232350_1.whl  20260701_234805_1.whl  20260701_235628_1.whl  20260702_002026_1.whl
notebooks/: 00_Load_Data.ipynb  01_EDA_Exploratory_Data_Analysis copy.ipynb  01_EDA_Exploratory_Data_Analysis.ipynb  02_Aggregation_Models.ipynb  03_Model&Projection_General.ipynb  03_Model_General.ipynb  04_Model&Projection_User_Based.ipynb  04_Model_User_Based.ipynb  05_Model&Projection_Time_Based.ipynb  05_Model_Time_Based.ipynb  06_Validation.ipynb
results/clusters/: training_clusters.parquet  training_generic_clusters.parquet  training_user_clusters.parquet  validation__time_based.parquet  validation_generic.parquet
results/validation_analysis/: boxplot_absence_drop_por_cluster.html  cluster_generic.parquet  cluster_time_based.parquet  cluster_user_based.parquet  compras.parquet  conversion_mes.parquet  evaluation_GMV.parquet  eventos.parquet  training_GMV.parquet
src/: config.py  data_loader.py  plots.py
src/evaluation/: absence_time.py  gmv.py  (+1 more)
(+26 files in other folders)
